--- a/MomentWork/app/src/main/res/layout/moments_only_text.xml
+++ b/MomentWork/app/src/main/res/layout/moments_only_text.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="@color/white"
-              android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white">
 
-    <include layout="@layout/include_moments_header"/>
+    <include
+        android:id="@+id/header"
+        layout="@layout/include_moments_header"/>
 
     <LinearLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/header"
         android:layout_marginLeft="74dp"
         android:layout_marginRight="@dimen/item_padding"
+        android:layout_marginTop="-35dp"
         android:orientation="vertical"
         tools:background="@android:color/holo_red_light">
 
@@ -26,8 +29,15 @@
             app:text_color="@color/normal_font_color"/>
     </LinearLayout>
 
+    <include
+        layout="@layout/include_moments_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/content"/>
 
-    <include layout="@layout/include_moments_bottom"/>
-
-    <View style="@style/base_divider_top_20"/>
-</LinearLayout>
+    <View
+        style="@style/base_divider_top_20"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="0dp"/>
+</RelativeLayout>
